--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pedrofoschiani/AppList.git"
+    "url": "git+https://github.com/pedrofoschiani/app-list"
   },
   "bugs": {
-    "url": "https://github.com/pedrofoschiani/AppList/issues"
+    "url": "https://github.com/pedrofoschiani/app-list"
   },
   "keywords": [
     "capacitor",
