--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Plugin para coletar o nome de todos os aplicativos instalados dentro do dispositivo, com exeção dos apps do sitema",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
-  "types": "dist/esm/definitions.d.ts",
+  "types": "dist/esm/index.d.ts",
   "unpkg": "dist/plugin.js",
   "files": [
     "android/src/main/",
@@ -43,7 +43,7 @@
     "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.mjs",
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
-    "prepare": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "devDependencies": {
     "@capacitor/android": "^7.0.0",
